--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,147 @@
-.App {
-  text-align: center;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul,
+li {
+  list-style: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+a {
+  text-decoration: none;
+}
+body {
+  font-family: sans-serif;
+  background-color: #666;
+}
+.container {
+  max-width: 100%;
+  margin: 0 auto;
+}
+.posts {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 15px;
+}
+.post {
+  width: 32%;
+  border: 1px solid #ccc;
+  padding: 7px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin-bottom: 2rem;
+  background-color: #eee;
+}
+.post h2 {
+  text-transform: capitalize;
+  font-style: italic;
+}
+.post a {
+  width: 100%;
+  height: 250px;
+  display: block;
+  margin: 1rem 0;
+}
+.post a img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+  object-position: center;
+}
+.post .post-detail {
+  display: flex;
+  align-items: baseline;
+  height: 40px;
+  padding: 0;
+}
+.post .post-detail i {
+  font-size: 20px;
+  cursor: pointer;
+}
+.post .post-detail i:last-child {
+  margin-left: 0.5rem;
+}
+.post .post-detail i.liked {
+  color: red;
+}
+.post p {
+  margin: 1rem 0;
+}
+@media (max-width: 940px) {
+  .post {
+    width: 48%;
+  }
+}
+@media (max-width: 600px) {
+  .post {
+    width: 100%;
+    margin-bottom: 15px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.singlePostpageWrapper {
+  padding: 1rem;
+}
+.singlePostpageWrapper .backHome {
+  border: 3px solid dodgerblue;
+  display: inline-block;
+  padding: 0.7rem;
+  color: rgb(1, 26, 250);
+  background-color: #eee;
+  text-transform: capitalize;
+  margin-left: 5rem;
+}
+.singlePostpageWrapper h1 {
+  text-align: center;
+  text-transform: capitalize;
+  margin: 0.5rem 0;
+  color: #eee;
+  font-style: italic;
+}
+.singlePostContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.singlePostContainer img {
+  max-width: 350px;
+  margin: 2rem auto;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cmt-wrapper {
+  width: 70%;
+  margin: 0 auto;
+  padding: 1rem;
+  border: 1px solid #ccc;
+}
+.cmt-wrapper ul {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 2rem;
+}
+.cmt-wrapper ul li {
+  display: flex;
+  padding: 0.5rem;
+  margin: 0.3rem;
+  border-radius: 0.3rem;
+  background-color: rgb(245, 190, 87);
+}
+.cmt-wrapper ul li p {
+  margin-left: 0.5rem;
+}
+.cmt-wrapper form {
+  display: flex;
+  flex-direction: column;
+}
+.cmt-wrapper form *:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+.cmt-wrapper form * {
+  height: 2rem;
+  padding: 0.6rem;
 }
